Minor code-style changes, and a tiny bugfix that makes overflow: ellipsis work correctly. Based on feedback from code review on r593.
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40594

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -408,12 +408,12 @@ a:link.google-analytics-link-track
             #library #library-content #library-content-main li {
                 display: list-item;
                 overflow: hidden;
-                text-overflow: elipsis;
+                text-overflow: ellipsis;
+                white-space: nowrap;
                 color: #666666;
             }
 			#library #library-content #library-content-main a.video-link {
 				font-weight: normal;	
-                display: block;
 				background: url(/images/playnav.png) no-repeat 0 3px;
 				padding: 0 2px 0 13px;
 			}
